log

Thu Mar 10 15:28:16 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fc4c30f
Thu Mar 10 16:08:02 HSP 2022: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
34e6236
Fri Mar 11 11:18:27 HSP 2022: 
In file included from test.c:5:
exercises.c: In function 'crearPersona':
exercises.c:62:4: error: implicit declaration of function 'strcopy'; did you mean 'strcpy'? [-Werror=implicit-function-declaration]
   62 |    strcopy(nuevaPersona->nombre, nombre);
      |    ^~~~~~~
      |    strcpy
exercises.c: In function 'crearVector':
exercises.c:87:23: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   87 |    vectorLocal->datos = (Vector*)calloc(n,sizeof(int));
      |                       ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8ac24d3
Fri Mar 11 11:22:10 HSP 2022: 
In file included from test.c:5:
exercises.c: In function 'crearPersona':
exercises.c:62:4: error: implicit declaration of function 'strcopy'; did you mean 'strcpy'? [-Werror=implicit-function-declaration]
   62 |    strcopy(nuevaPersona->nombre, nombre);
      |    ^~~~~~~
      |    strcpy
exercises.c: In function 'crearVector':
exercises.c:87:23: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   87 |    vectorLocal->datos = (Vector*)calloc(n,sizeof(int));
      |                       ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2292f43
